<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <ImageView
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/app_name"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:background="@drawable/playerlogo"
            android:onClick="log"
            />

        <EditText
            android:id="@+id/emailPlayer"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="textEmailAddress"
            android:hint="email"

            tools:ignore="HardcodedText" />
        <EditText
            android:id="@+id/passwordPlayer"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:hint="@string/mot_de_passe"
            />
        <Button
            android:id="@+id/connexionBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connexion"
            />
        <Button
            android:id="@+id/passForgottenBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mot_de_passe_oublier"
            />

    </LinearLayout>




</RelativeLayout>